# gol-pr

./: .gitignore  README.md
gol/: build.sh  db.sqlite3  main.py  pyproject.toml  vercel.json
gol-app/: package-lock.json  package.json  vite.config.ts
gol-app/src/: App.tsx  main.tsx  types.ts
gol-app/src/components/: Controls.tsx  Gallery.tsx  Game.tsx  Grid.ts  Grid.tsx  Header.tsx  ShareTools.tsx  presets.ts
gol-srv/: db.sqlite3  pyproject.toml  schema.yml
gol-srv/gol/: settings.py  urls.py  wsgi.py
gol-srv/grids/: admin.py  models.py
gol-srv/grids/management/commands/: populate_db.py
gol-srv/grids/migrations/: 0001_initial.py
gol/app/: index.html  package-lock.json  vite.config.ts
gol/app/src/: types.ts
gol/app/src/components/: ErrorPage.tsx  Gallery.tsx  Game.tsx  GameCard.tsx  Rating.tsx  presets.ts
gol/gol/: asgi.py  settings.py  urls.py
gol/grids/: serializers.py  urls.py  views.py
gol/grids/management/commands/: populate_db.py
gol/templates/: index.html
